JEDIT 4.1 VERSION HISTORY

* Version 4.1pre1

+ New Features

- Interilis syntax highlighting (Claude Eisenhut)
- Added SOCKS proxy support (Alfonso Garcia)

+ Enhancements

- Updated printing code (Thomas Dilts)
  - Adds a print preview function
  - Uses Java 2 version 1.4 print dialogs when running on that Java
    version
  - Fixes a few bugs
- MacOS plugin version 1.2 adds an option pane with a few settings, and
  some bug fixes and cleanups (Kris Kopicki)
- On Unix, the installer now defaults to installing in the user's home
  directory when running as a non-root user
- Updated PL-SQL mode (Steve Snider)
- A single invalid file system browser coloring regular expression no
  longer stops the remaining expressions from working
- HyperSearch now respects rectangular selections

+ Bug Fixes

- Select Open File; press Enter first; then choose a file to open. Bang,
  an error message. Now fixed
- Fixed a bug in the undo code that would occur sometimes when multiple
  removes were performed in a row
- If the splash screen was disabled, running jEdit with the -nogui and
  -nobackground command line arguments didn't work
- When using the FTP plugin, renaming a file did not reload the
  directory
- Triple-clicking on the last line of a file caused problems
- When closing a file with unsaved changes, the file will stay open if
  the save failed. Previously it would be closed and the unsaved changes
  would be lost forever

+ API Changes

- Two methods added to jEdit class:

  getDoubleProperty()
  setDoubleProperty()